# supportdesk_openenv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_project.py
scripts/: validate-submission.sh
server/: app.py
supportdesk_env/: __init__.py  env.py  graders.py  models.py  tasks.py
