[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportdesk-openenv"
version = "1.0.0"
description = "Real-world OpenEnv customer support ticket triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.1",
  "pydantic==2.11.3",
  "openai>=2.7.2",
  "httpx==0.28.1",
  "PyYAML==6.0.2",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["supportdesk_env*", "server*"]